--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -391,6 +391,7 @@
                     <div class="dropdown-menu">
                         <a href="{{ url_for('admin.users') }}">Users</a>
                         <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
+                        <a href="{{ url_for('admin.analytics') }}">Analytics</a>
                     </div>
                 </div>
                 {% endif %}
