Add video management page

--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -389,9 +389,10 @@
                 <div class="dropdown">
                     <span class="dropdown-toggle btn-admin">Admin</span>
                     <div class="dropdown-menu">
-                        <a href="{{ url_for('admin.users') }}">Users</a>
-                        <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
                         <a href="{{ url_for('admin.analytics') }}">Analytics</a>
+                        <a href="{{ url_for('admin.users') }}">Users</a>
+                        <a href="{{ url_for('admin.videos') }}">Videos</a>
+                        <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
                     </div>
                 </div>
                 {% endif %}
