--- a/rtube/templates/admin/videos.html
+++ b/rtube/templates/admin/videos.html
@@ -318,6 +318,7 @@
             <a href="{{ url_for('admin.videos') }}" class="active">Videos</a>
             <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
             <a href="{{ url_for('admin.regenerate_previews') }}">Regenerate Previews</a>
+            <a href="{{ url_for('admin.audit_log') }}">Audit Log</a>
         </nav>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
