--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -393,6 +393,8 @@
                         <a href="{{ url_for('admin.users') }}">Users</a>
                         <a href="{{ url_for('admin.videos') }}">Videos</a>
                         <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
+                        <a href="{{ url_for('admin.regenerate_previews') }}">Regenerate Previews</a>
+                        <a href="{{ url_for('admin.audit_log') }}">Audit Log</a>
                     </div>
                 </div>
                 {% endif %}
