--- a/rtube/templates/admin/audit_log.html
+++ b/rtube/templates/admin/audit_log.html
@@ -288,6 +288,7 @@
             <a href="{{ url_for('admin.videos') }}">Videos</a>
             <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
             <a href="{{ url_for('admin.regenerate_previews') }}">Regenerate Previews</a>
+            <a href="{{ url_for('admin.announcements') }}">Announcements</a>
             <a href="{{ url_for('admin.audit_log') }}" class="active">Audit Log</a>
         </nav>
 
