--- a/rtube/templates/admin/regenerate_previews.html
+++ b/rtube/templates/admin/regenerate_previews.html
@@ -225,6 +225,7 @@
             <a href="{{ url_for('admin.videos') }}">Videos</a>
             <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
             <a href="{{ url_for('admin.regenerate_previews') }}" class="active">Regenerate Previews</a>
+            <a href="{{ url_for('admin.announcements') }}">Announcements</a>
             <a href="{{ url_for('admin.audit_log') }}">Audit Log</a>
         </nav>
 
