--- a/rtube/templates/admin/users.html
+++ b/rtube/templates/admin/users.html
@@ -236,6 +236,7 @@
             <a href="{{ url_for('admin.videos') }}">Videos</a>
             <a href="{{ url_for('admin.import_videos') }}">Import Videos</a>
             <a href="{{ url_for('admin.regenerate_previews') }}">Regenerate Previews</a>
+            <a href="{{ url_for('admin.announcements') }}">Announcements</a>
             <a href="{{ url_for('admin.audit_log') }}">Audit Log</a>
         </nav>
 
